Prevent container cutting off

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -299,6 +299,9 @@ div.footer-buttons {
 		margin-top: 6rem;
     height: 12.5vh;
 	}
+	#container {
+		height: 60vh
+	}
 }
 @media screen and (orientation:landscape) and (max-width: 767px) {
 	#space {
